--- a/resources/css/visibility-bar.scss
+++ b/resources/css/visibility-bar.scss
@@ -2,17 +2,22 @@
 
 .core19-visibility-bar {
     display: flex;
+    height: 32px;
+    text-transform: uppercase;
+    font-size: 10px;
+    line-height: 1.9;
 
     .core19-visibility-bar-show-side-panel {
         width: $side-panel-width;
+        color: $blue-gray-700;
         background-color: $blue-gray-100;
         padding: 5px 10px;
     }
 
     .core19-visibility-bar-show-log {
         flex-grow: 1;
+        color: $blue-gray-100;
         background-color: $blue-gray-900;
-        color: white;
         padding: 5px 10px;
         text-align: right;
     }
